Simplify and cleanups